# michel

./: .gitignore  Cargo.toml  README.md  file-plugin.wasm  flake.nix  rust-toolchain.toml
michel_core/: Cargo.toml
michel_core/src/: lib.rs  persistence.rs
michel_core/src/plugins/: wasi.rs
michel_desktop/: .gitignore  package.json  pnpm-lock.yaml
michel_desktop/src-tauri/: Cargo.toml  tauri.conf.json
michel_desktop/src-tauri/src/: config.rs  main.rs  search_bar.rs  settings.rs
michel_desktop/src/components/: Entry.svelte  Plugin.svelte
michel_desktop/src/models/: models.ts
michel_desktop/src/routes/: +layout.ts
michel_desktop/src/routes/search-bar/: +page.svelte
michel_desktop/src/routes/search-bar.html/: +page.svelte
michel_desktop/src/routes/settings/: +page.svelte
michel_desktop/src/routes/settings.html/: +page.svelte
michel_desktop/src/styles/: reset.css
michel_index/: Cargo.toml
michel_index/src/: lib.rs
michel_server/: Cargo.toml
michel_webui/: Cargo.toml
wit/: plugin.wit
