[package]
name = "michel_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
anyhow = "1.0.69"
wasmtime = { version = "6.0.0", features = ["component-model", "async"] }
host = { git = "https://github.com/bytecodealliance/preview2-prototyping" }
wasi-cap-std-sync = { git = "https://github.com/bytecodealliance/preview2-prototyping" }
serde_json = "1.0.93"
lazy_static = "1.4.0"
tokio = { version = "1.26.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }